fixed white spaces on the right side

--- a/css/mobilefriendly.css
+++ b/css/mobilefriendly.css
@@ -5,7 +5,7 @@
     }
     .aside {
         padding: 1em;
-        width: 100%;
+        width: 90%;
         position: unset;
         font-size: 10px;
     }
